# QGC-AS-Ver2

./: CMakeLists.txt  QGCCommon.pri  qgcimages.qrc  qgcresources.qrc  qgroundcontrol.pro  qgroundcontrol.qrc
src/: .qmlls.ini  CMakeLists.txt  QGCApplication.cc  QGCApplication.h  RunGuard.cc  main.cc
src/ADSB/: ADSBVehicle.h  ADSBVehicleManager.cc  ADSBVehicleManager.h  CMakeLists.txt
src/API/: CMakeLists.txt  QGCCorePlugin.cc  QGCCorePlugin.h  QGCOptions.h
src/AnalyzeView/: AnalyzeView.qml  CMakeLists.txt  ExifParser.cc  GeoTagController.cc  GeoTagController.h  GeoTagPage.qml  GeoTagWorker.cc  LogDownloadController.cc  LogDownloadController.h  LogDownloadPage.qml  LogEntry.h  MAVLinkChartController.cc  MAVLinkChartController.h  MAVLinkConsoleController.h  MAVLinkConsolePage.qml  MAVLinkInspectorController.h  MAVLinkInspectorPage.qml  MAVLinkMessage.h  MAVLinkMessageField.cc  MAVLinkMessageField.h  MAVLinkSystem.h  MavlinkConsoleController.cc  MavlinkConsoleController.h  PX4LogParser.cc  ULogParser.cc  VibrationPage.qml  reader.cpp
src/Android/: CMakeLists.txt
src/AutoPilotPlugins/: AutoPilotPlugin.cc  AutoPilotPlugin.h  CMakeLists.txt  VehicleComponent.h
src/Camera/: CMakeLists.txt  CameraMetaData.h  MavlinkCameraControl.h  QGCCameraIO.cc  QGCCameraManager.h  QGCVideoStreamInfo.h  VehicleCameraControl.cc
src/Comms/: BluetoothLink.cc  BluetoothLink.h  CMakeLists.txt  LinkConfiguration.h  LinkInterface.cc  LinkInterface.h  LinkManager.cc  LinkManager.h  LogReplayLink.cc  LogReplayLink.h  LogReplayLinkController.h  MAVLinkProtocol.cc  QGCSerialPortInfo.h  SerialLink.cc  TCPLink.cc
src/FactSystem/: CMakeLists.txt  Fact.cc  Fact.h  FactGroup.h  FactGroupListModel.h  FactMetaData.h  FactValueSliderListModel.h  ParameterManager.cc  ParameterManager.h
src/FirmwarePlugin/: CMakeLists.txt  FirmwarePlugin.cc  FirmwarePlugin.h
src/FlightDisplay/: CMakeLists.txt  CustomGuidedActionsController.qml  DefaultChecklist.qml  FixedWingChecklist.qml  FlightDisplayViewDummy.qml  FlightDisplayViewGStreamer.qml  FlightDisplayViewQtMultimedia.qml  FlightDisplayViewUVC.qml  FlightDisplayViewVideo.qml  FlyView.qml  FlyViewAdditionalActionsButton.qml  FlyViewAdditionalActionsList.qml  FlyViewAdditionalActionsPanel.qml  FlyViewAdditionalCustomActionsList.qml  FlyViewBottomRightRowLayout.qml  FlyViewCustomLayer.qml  FlyViewInsetViewer.qml  FlyViewInstrumentPanel.qml  FlyViewMap.qml  FlyViewMissionCompleteDialog.qml  FlyViewPreFlightChecklistPopup.qml  FlyViewToolStrip.qml  FlyViewToolStripActionList.qml  FlyViewTopRightColumnLayout.qml  FlyViewTopRightPanel.qml  FlyViewVideo.qml  FlyViewWidgetLayer.qml  GripperMenu.qml  GuidedActionConfirm.qml  GuidedActionConnect.qml  GuidedActionGimbal.qml  GuidedActionGripper.qml  GuidedActionLand.qml  GuidedActionPause.qml  GuidedActionPhotoVideo.qml  GuidedActionPlan.qml  GuidedActionRTL.qml  GuidedActionScope.qml  GuidedActionTakeoff.qml  GuidedActionZoomIn.qml  (+31 more)
src/FlightMap/: CMakeLists.txt  FlightMap.qml  MapScale.qml
src/FollowMe/: CMakeLists.txt  FollowMe.cc  FollowMe.h
src/GPS/: CMakeLists.txt  GPSManager.cc  GPSProvider.cc  RTCMMavlink.cc  RTCMMavlink.h
src/Gimbal/: CMakeLists.txt  GimbalController.cc  GimbalController.h
src/Joystick/: CMakeLists.txt  Joystick.h  JoystickManager.cc  JoystickManager.h  JoystickSDL.cc  JoystickSDL.h
src/MAVLink/: CMakeLists.txt  ImageProtocolManager.cc  ImageProtocolManager.h  MAVLinkSigning.cc  MAVLinkSigning.h  MAVLinkStreamConfig.h  QGCMAVLink.cc  QGCMAVLink.h  StatusTextHandler.cc  StatusTextHandler.h  SysStatusSensorInfo.cc
src/MissionManager/: CMakeLists.txt  CameraCalc.h  FixedWingLandingComplexItem.h  GeoFenceController.h  LandingComplexItem.cc  LandingComplexItem.h  MissionCommandTree.cc  MissionCommandTree.h  MissionController.cc  MissionController.h  MissionItem.cc  MissionItem.h  MissionManager.h  PlanElementController.h  PlanMasterController.h  RallyPointController.h  SimpleMissionItem.h  StructureScanComplexItem.cc  TransectStyleComplexItem.cc  VisualMissionItem.h
src/PositionManager/: CMakeLists.txt  PositionManager.cpp  PositionManager.h  SimulatedPosition.cc
src/QmlControls/: APMSubMotorDisplay.qml  AltModeDialog.qml  AnalyzePage.qml  AppMessages.qml  AppSettings.qml  AutotuneUI.qml  AxisMonitor.qml  BatteryIndicator.qml  CMakeLists.txt  CameraCalcCamera.qml  CameraCalcGrid.qml  CameraSection.qml  ClickableColor.qml  ConfigButton.qml  CorridorScanEditor.qml  CorridorScanMapVisual.qml  DeadMouseArea.qml  DropButton.qml  DropPanel.qml  EditPositionDialog.qml  EditPositionDialogController.h  ExclusiveGroupItem.qml  FWLandingPatternEditor.qml  FWLandingPatternMapVisual.qml  FactSlider.qml  FactValueGrid.h  FileButton.qml  FirstRunPrompt.qml  FlightModeIndicator.qml  FlightModeMenu.qml  FlightModeMenuIndicator.qml  FlightPathSegment.h  FlyViewToolBar.qml  FlyViewToolBarIndicators.qml  GPSIndicator.qml  GPSIndicatorPage.qml  GeoFenceEditor.qml  GeoFenceMapVisuals.qml  GimbalIndicatorPage.qml  HeightIndicator.qml  (+141 more)
src/QtLocationPlugin/: CMakeLists.txt  QGCCacheTile.h  QGCCachedTileSet.h  QGCMapEngine.cpp  QGCMapEngine.h  QGCMapEngineData.h  QGCMapEngineManager.cc  QGCMapEngineManager.h  QGCMapUrlEngine.cpp  QGCMapUrlEngine.h  QGCTileCacheWorker.cpp  QGCTileCacheWorker.h  QGCTileSet.h  QGeoFileTileCacheQGC.cpp  QGeoFileTileCacheQGC.h  QGeoMapReplyQGC.cpp  QGeoMapReplyQGC.h  QGeoServiceProviderPluginQGC.cpp  QGeoServiceProviderPluginQGC.h  QGeoTileFetcherQGC.cpp  QGeoTileFetcherQGC.h  QGeoTiledMappingManagerEngineQGC.cpp  QGeoTiledMappingManagerEngineQGC.h
src/Settings/: ADSBVehicleManagerSettings.h  APMMavlinkStreamRateSettings.h  App.SettingsGroup.json  AppSettings.cc  AppSettings.h  AutoConnectSettings.h  BatteryIndicatorSettings.h  BrandImageSettings.h  CMakeLists.txt  FirmwareUpgradeSettings.h  FlightMapSettings.h  FlightModeSettings.h  FlyView.SettingsGroup.json  FlyViewSettings.h  GimbalControllerSettings.h  MapsSettings.h  Mavlink.SettingsGroup.json  MavlinkActionsSettings.h  MavlinkSettings.cc  MavlinkSettings.h  OfflineMapsSettings.h  PlanViewSettings.h  RTKSettings.h  (+8 more)
(+555 files in other folders)
