add_library(QmlControls
	EditPositionDialogController.cc
	EditPositionDialogController.h
	FactValueGrid.cc
	FactValueGrid.h
	FlightPathSegment.cc
	FlightPathSegment.h
	HorizontalFactValueGrid.cc
	HorizontalFactValueGrid.h
	InstrumentValueData.cc
	InstrumentValueData.h
	MavlinkAction.cc
	MavlinkAction.h
	MavlinkActionManager.cc
	MavlinkActionManager.h
	ParameterEditorController.cc
	ParameterEditorController.h
	QGCFenceCircle.cc
	QGCFenceCircle.h
	QGCFencePolygon.cc
	QGCFencePolygon.h
	QGCFileDialogController.cc
	QGCFileDialogController.h
	QGCGeoBoundingCube.cc
	QGCGeoBoundingCube.h
	QGCImageProvider.cc
	QGCImageProvider.h
	QGCMapCircle.cc
	QGCMapCircle.h
	QGCMapPalette.cc
	QGCMapPalette.h
	QGCMapPolygon.cc
	QGCMapPolygon.h
	QGCMapPolyline.cc
	QGCMapPolyline.h
	QGCPalette.cc
	QGCPalette.h
	QGCQGeoCoordinate.cc
	QGCQGeoCoordinate.h
	QGroundControlQmlGlobal.cc
	QGroundControlQmlGlobal.h
	QmlObjectListModel.cc
	QmlObjectListModel.h
	QmlUnitsConversion.h
	RCChannelMonitorController.cc
	RCChannelMonitorController.h
	RCToParamDialogController.cc
	RCToParamDialogController.h
	ScreenToolsController.cc
	ScreenToolsController.h
	TerrainProfile.cc
	TerrainProfile.h
	ToolStripAction.cc
	ToolStripAction.h
	ToolStripActionList.cc
	ToolStripActionList.h
)

add_custom_target(QmlControlsQml
	SOURCES
		AltModeDialog.qml
		AnalyzePage.qml
		APMSubMotorDisplay.qml
		AppMessages.qml
		AppSettings.qml
		AutotuneUI.qml
		AxisMonitor.qml
		BatteryIndicator.qml
		CameraCalcCamera.qml
		CameraCalcGrid.qml
		CameraSection.qml
		ClickableColor.qml
		ConfigButton.qml
		CorridorScanEditor.qml
		CorridorScanMapVisual.qml
		DeadMouseArea.qml
		DropButton.qml
		DropPanel.qml
		EditPositionDialog.qml
		ExclusiveGroupItem.qml
		FactSlider.qml
		FileButton.qml
		FirstRunPrompt.qml
		FlightModeIndicator.qml
		FlightModeMenu.qml
		FlightModeMenuIndicator.qml
		FlyViewToolBar.qml
		FlyViewToolBarIndicators.qml
		FWLandingPatternEditor.qml
		FWLandingPatternMapVisual.qml
		GeoFenceEditor.qml
		GeoFenceMapVisuals.qml
		GPSIndicator.qml
		GPSIndicatorPage.qml
		HeightIndicator.qml
		HorizontalFactValueGrid.qml
		IndicatorButton.qml
		InstrumentValueEditDialog.qml
		InstrumentValueLabel.qml
		InstrumentValueValue.qml
		JoystickThumbPad.qml
		KMLOrSHPFileDialog.qml
		LabelledButton.qml
		LabelledComboBox.qml
		LabelledLabel.qml
		LabelledSlider.qml
		LogReplayStatusBar.qml
		MainStatusIndicator.qml
		MainStatusIndicatorOfflinePage.qml
		MainWindowSavedState.qml
		MAVLinkChart.qml
		MAVLinkMessageButton.qml
		MissionCommandDialog.qml
		MissionItemEditor.qml
		MissionItemIndexLabel.qml
		MissionItemMapVisual.qml
		MissionItemStatus.qml
		MissionSettingsEditor.qml
		MvPanelPage.qml
		OfflineMapButton.qml
		OfflineMapEditor.qml
		OfflineMapInfo.qml
		ParameterDiffDialog.qml
		ParameterEditor.qml
		ParameterEditorDialog.qml
		PIDTuning.qml
		PipState.qml
		PipView.qml
		PlanEditToolbar.qml
		PlanToolBarIndicators.qml
		PlanView.qml
		PlanViewToolBar.qml
		PreFlightCheckButton.qml
		PreFlightCheckGroup.qml
		PreFlightCheckModel.qml
		QGCButton.qml
		QGCCheckBox.qml
		QGCCheckBoxSlider.qml
		QGCColoredImage.qml
		QGCColumnButton.qml
		QGCComboBox.qml
		QGCDelayButton.qml
		QGCDynamicObjectManager.qml
		QGCFileDialog.qml
		QGCFlickable.qml
		QGCFlickableScrollIndicator.qml
		QGCGroupBox.qml
		QGCLabel.qml
		QGCListView.qml
		QGCMapLabel.qml
		QGCMenu.qml
		QGCMenuItem.qml
		QGCMenuSeparator.qml
		QGCMouseArea.qml
		QGCMovableItem.qml
		QGCOptionsComboBox.qml
		QGCPageIndicator.qml
		QGCPopupDialog.qml
		QGCRadioButton.qml
		QGCRoundButton.qml
		QGCSimpleMessageDialog.qml
		QGCSlider.qml
		QGCSwipeView.qml
		QGCSwitch.qml
		QGCTabBar.qml
		QGCTabButton.qml
		QGCTextField.qml
		QGCToolBarButton.qml
		QGCToolInsets.qml
		RallyPointEditorHeader.qml
		RallyPointItemEditor.qml
		RallyPointMapVisuals.qml
		RCChannelMonitor.qml
		RCToParamDialog.qml
		RemoteIDIndicatorPage.qml
		ScreenTools.qml
		SectionHeader.qml
		SelectableControl.qml
		SettingsButton.qml
		SettingsGroupLayout.qml
		SetupPage.qml
		SignalStrength.qml
		SimpleItemEditor.qml
		SimpleItemMapVisual.qml
		SliderSwitch.qml
		StructureScanEditor.qml
		StructureScanMapVisual.qml
		SubMenuButton.qml
		SurveyItemEditor.qml
		SurveyMapVisual.qml
		TakeoffItemMapVisual.qml
		TerrainStatus.qml
		TimedProgressTracker.qml
		ToolIndicatorPage.qml
		ToolStrip.qml
		ToolStripDropPanel.qml
		ToolStripHoverButton.qml
		TransectStyleComplexItemEditor.qml
		TransectStyleComplexItemStats.qml
		TransectStyleComplexItemTabBar.qml
		TransectStyleComplexItemTerrainFollow.qml
		TransectStyleMapVisuals.qml
		ValueSlider.qml
		VehicleMessageList.qml
		VehicleRotationCal.qml
		VehicleSummaryRow.qml
		VTOLLandingPatternEditor.qml
		VTOLLandingPatternMapVisual.qml
)

target_link_libraries(QmlControls
	PUBLIC
		qgc

		FactSystem
	PUBLIC
		Qt5::Concurrent
		Qt5::Location
		Qt5::SerialPort
		Qt5::TextToSpeech
		Qt5::Widgets
)

target_include_directories(QmlControls INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})